# serializer version: 1
# name: test_a_small_state_snapshot_pins_the_value_contracts
  dict({
    'binary_sensor.n_i_n_a_safety_monitor_unsafe': 'off',
    'sensor.n_i_n_a_session_avg_hfr': 'unknown',
    'sensor.n_i_n_a_session_integration_time': '0.0',
  })
# ---
# name: test_registry_snapshot[binary_sensor]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_focuser_autofocus_failed',
      'original_name': 'Autofocus failed',
      'unique_id': '01JTESTENTRY0000000000000_autofocus_failed',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_camera_exposing',
      'original_name': 'Exposing',
      'unique_id': '01JTESTENTRY0000000000000_camera_exposing',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.n_i_n_a_filter_wheel_moving',
      'original_name': 'Moving',
      'unique_id': '01JTESTENTRY0000000000000_filterwheel_is_moving',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.n_i_n_a_focuser_moving',
      'original_name': 'Moving',
      'unique_id': '01JTESTENTRY0000000000000_focuser_is_moving',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_mount_at_home',
      'original_name': 'At home',
      'unique_id': '01JTESTENTRY0000000000000_mount_at_home',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_mount_at_park',
      'original_name': 'At park',
      'unique_id': '01JTESTENTRY0000000000000_mount_parked',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.n_i_n_a_rotator_moving',
      'original_name': 'Moving',
      'unique_id': '01JTESTENTRY0000000000000_rotator_is_moving',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.n_i_n_a_rotator_synced',
      'original_name': 'Synced',
      'unique_id': '01JTESTENTRY0000000000000_rotator_synced',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.n_i_n_a_safety_monitor_connected',
      'original_name': 'Connected',
      'unique_id': '01JTESTENTRY0000000000000_safetymonitor_connected',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_safety_monitor_unsafe',
      'original_name': 'Unsafe',
      'unique_id': '01JTESTENTRY0000000000000_safetymonitor_is_safe',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'binary_sensor.n_i_n_a_sequence_running',
      'original_name': 'Sequence running',
      'unique_id': '01JTESTENTRY0000000000000_sequence_running',
    }),
  ])
# ---
# name: test_registry_snapshot[button]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_focuser_auto_focus',
      'original_name': 'Auto focus',
      'unique_id': '01JTESTENTRY0000000000000_btn_auto_focus',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_camera_abort_exposure',
      'original_name': 'Abort exposure',
      'unique_id': '01JTESTENTRY0000000000000_btn_camera_abort',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_mount_find_home',
      'original_name': 'Find home',
      'unique_id': '01JTESTENTRY0000000000000_btn_mount_find_home',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_mount_park',
      'original_name': 'Park',
      'unique_id': '01JTESTENTRY0000000000000_btn_mount_park',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_mount_unpark',
      'original_name': 'Unpark',
      'unique_id': '01JTESTENTRY0000000000000_btn_mount_unpark',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_sequence_start',
      'original_name': 'Sequence start',
      'unique_id': '01JTESTENTRY0000000000000_btn_sequence_start',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'button.n_i_n_a_sequence_stop',
      'original_name': 'Sequence stop',
      'unique_id': '01JTESTENTRY0000000000000_btn_sequence_stop',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'button.n_i_n_a_guider_clear_calibration',
      'original_name': 'Clear calibration',
      'unique_id': '01JTESTENTRY0000000000000_guider_clear_calibration',
    }),
  ])
# ---
# name: test_registry_snapshot[event]
  list([
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'event.n_i_n_a_error',
      'original_name': 'Error',
      'unique_id': '01JTESTENTRY0000000000000_nina_error',
    }),
  ])
# ---
# name: test_registry_snapshot[image]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'image.n_i_n_a_last_frame',
      'original_name': 'Last frame',
      'unique_id': '01JTESTENTRY0000000000000_latest_image',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'image.n_i_n_a_livestack',
      'original_name': 'Livestack',
      'unique_id': '01JTESTENTRY0000000000000_livestack',
    }),
  ])
# ---
# name: test_registry_snapshot[light]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'light.n_i_n_a_flat_panel_light',
      'original_name': 'Light',
      'unique_id': '01JTESTENTRY0000000000000_flat_panel_light',
    }),
  ])
# ---
# name: test_registry_snapshot[number]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'number.n_i_n_a_camera_target_temperature',
      'original_name': 'Target temperature',
      'unique_id': '01JTESTENTRY0000000000000_camera_cooling_setpoint',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'number.n_i_n_a_camera_usb_limit',
      'original_name': 'USB limit',
      'unique_id': '01JTESTENTRY0000000000000_camera_usb_limit',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'number.n_i_n_a_flat_panel_brightness',
      'original_name': 'Brightness',
      'unique_id': '01JTESTENTRY0000000000000_flat_panel_brightness',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'number.n_i_n_a_focuser_position',
      'original_name': 'Position',
      'unique_id': '01JTESTENTRY0000000000000_focuser_position_control',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'number.n_i_n_a_rotator_mechanical_position',
      'original_name': 'Mechanical position',
      'unique_id': '01JTESTENTRY0000000000000_rotator_mechanical_position',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'number.n_i_n_a_rotator_position',
      'original_name': 'Position',
      'unique_id': '01JTESTENTRY0000000000000_rotator_position_control',
    }),
  ])
# ---
# name: test_registry_snapshot[select]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'select.n_i_n_a_filter_wheel_filter',
      'original_name': 'Filter',
      'unique_id': '01JTESTENTRY0000000000000_filterwheel_select',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'select.n_i_n_a_mount_tracking_rate',
      'original_name': 'Tracking rate',
      'unique_id': '01JTESTENTRY0000000000000_tracking_rate_select',
    }),
  ])
# ---
# name: test_registry_snapshot[sensor]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_camera_cooler_power',
      'original_name': 'Cooler power',
      'unique_id': '01JTESTENTRY0000000000000_camera_cooler_power',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_camera_gain',
      'original_name': 'Gain',
      'unique_id': '01JTESTENTRY0000000000000_camera_gain',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_camera_offset',
      'original_name': 'Offset',
      'unique_id': '01JTESTENTRY0000000000000_camera_offset',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_camera_state',
      'original_name': 'State',
      'unique_id': '01JTESTENTRY0000000000000_camera_status',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_camera_temperature',
      'original_name': 'Temperature',
      'unique_id': '01JTESTENTRY0000000000000_camera_temperature',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_flat_panel_cover_state',
      'original_name': 'Cover state',
      'unique_id': '01JTESTENTRY0000000000000_flat_panel_cover_state',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_flats_completed_iterations',
      'original_name': 'Flats completed iterations',
      'unique_id': '01JTESTENTRY0000000000000_flats_completed_iterations',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_flats_state',
      'original_name': 'Flats state',
      'unique_id': '01JTESTENTRY0000000000000_flats_state',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_flats_total_iterations',
      'original_name': 'Flats total iterations',
      'unique_id': '01JTESTENTRY0000000000000_flats_total_iterations',
    }),
    dict({
      'enabled_default': False,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_focuser_position',
      'original_name': 'Position',
      'unique_id': '01JTESTENTRY0000000000000_focuser_position',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_focuser_step_size',
      'original_name': 'Step size',
      'unique_id': '01JTESTENTRY0000000000000_focuser_step_size',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_focuser_temperature',
      'original_name': 'Temperature',
      'unique_id': '01JTESTENTRY0000000000000_focuser_temperature',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_exposure',
      'original_name': 'Last image exposure',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_exposure',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_filter',
      'original_name': 'Last image filter',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_filter',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_hfr',
      'original_name': 'Last image HFR',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_hfr',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_mean_adu',
      'original_name': 'Last image mean ADU',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_mean_adu',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_rms',
      'original_name': 'Last image RMS',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_rms',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_star_count',
      'original_name': 'Last image star count',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_stars',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_last_image_target',
      'original_name': 'Last image target',
      'unique_id': '01JTESTENTRY0000000000000_frame_last_target',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_avg_hfr',
      'original_name': 'Session avg HFR',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_avg_hfr',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_avg_stars',
      'original_name': 'Session avg stars',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_avg_stars',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_image_count',
      'original_name': 'Session image count',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_count',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_integration_time',
      'original_name': 'Session integration time',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_integration',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_worst_hfr',
      'original_name': 'Session worst HFR',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_max_hfr',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_best_hfr',
      'original_name': 'Session best HFR',
      'unique_id': '01JTESTENTRY0000000000000_frame_session_min_hfr',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_guider_rms_declination',
      'original_name': 'RMS declination',
      'unique_id': '01JTESTENTRY0000000000000_guider_rms_dec',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_guider_rms_ra',
      'original_name': 'RMS RA',
      'unique_id': '01JTESTENTRY0000000000000_guider_rms_ra',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_guider_rms_total',
      'original_name': 'RMS total',
      'unique_id': '01JTESTENTRY0000000000000_guider_rms_total',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_guider_status',
      'original_name': 'Status',
      'unique_id': '01JTESTENTRY0000000000000_guider_status',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_mount_altitude',
      'original_name': 'Altitude',
      'unique_id': '01JTESTENTRY0000000000000_mount_altitude',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_mount_azimuth',
      'original_name': 'Azimuth',
      'unique_id': '01JTESTENTRY0000000000000_mount_azimuth',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_mount_declination',
      'original_name': 'Declination',
      'unique_id': '01JTESTENTRY0000000000000_mount_dec',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_mount_right_ascension',
      'original_name': 'Right ascension',
      'unique_id': '01JTESTENTRY0000000000000_mount_ra',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_mount_side_of_pier',
      'original_name': 'Side of pier',
      'unique_id': '01JTESTENTRY0000000000000_mount_side_of_pier',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_mount_sidereal_time',
      'original_name': 'Sidereal time',
      'unique_id': '01JTESTENTRY0000000000000_mount_sidereal_time',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_mount_time_to_meridian_flip',
      'original_name': 'Time to meridian flip',
      'unique_id': '01JTESTENTRY0000000000000_mount_time_to_meridian_flip',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_sequence_progress',
      'original_name': 'Sequence progress',
      'unique_id': '01JTESTENTRY0000000000000_sequence_progress',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_sequence_target',
      'original_name': 'Sequence target',
      'unique_id': '01JTESTENTRY0000000000000_sequence_target_name',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_session_start',
      'original_name': 'Session start',
      'unique_id': '01JTESTENTRY0000000000000_session_start',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_dew_point',
      'original_name': 'Dew point',
      'unique_id': '01JTESTENTRY0000000000000_weather_dew_point',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_humidity',
      'original_name': 'Humidity',
      'unique_id': '01JTESTENTRY0000000000000_weather_humidity',
    }),
    dict({
      'enabled_default': True,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.n_i_n_a_weather_source',
      'original_name': 'Weather source',
      'unique_id': '01JTESTENTRY0000000000000_weather_name',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_pressure',
      'original_name': 'Pressure',
      'unique_id': '01JTESTENTRY0000000000000_weather_pressure',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_rain_rate',
      'original_name': 'Rain rate',
      'unique_id': '01JTESTENTRY0000000000000_weather_rain_rate',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_sky_brightness',
      'original_name': 'Sky brightness',
      'unique_id': '01JTESTENTRY0000000000000_weather_sky_brightness',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_sky_temperature',
      'original_name': 'Sky temperature',
      'unique_id': '01JTESTENTRY0000000000000_weather_sky_temperature',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_temperature',
      'original_name': 'Temperature',
      'unique_id': '01JTESTENTRY0000000000000_weather_temperature',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_wind_direction',
      'original_name': 'Wind direction',
      'unique_id': '01JTESTENTRY0000000000000_weather_wind_direction',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_wind_gust',
      'original_name': 'Wind gust',
      'unique_id': '01JTESTENTRY0000000000000_weather_wind_gust',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'sensor.n_i_n_a_weather_wind_speed',
      'original_name': 'Wind speed',
      'unique_id': '01JTESTENTRY0000000000000_weather_wind_speed',
    }),
  ])
# ---
# name: test_registry_snapshot[switch]
  list([
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_camera_cooler',
      'original_name': 'Cooler',
      'unique_id': '01JTESTENTRY0000000000000_camera_cooler_switch',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_camera_dew_heater',
      'original_name': 'Dew heater',
      'unique_id': '01JTESTENTRY0000000000000_camera_dew_heater',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_flat_panel_cover',
      'original_name': 'Cover',
      'unique_id': '01JTESTENTRY0000000000000_flat_panel_cover',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_guider',
      'original_name': None,
      'unique_id': '01JTESTENTRY0000000000000_guider_switch',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_livestack',
      'original_name': 'Livestack',
      'unique_id': '01JTESTENTRY0000000000000_livestack',
    }),
    dict({
      'enabled_default': False,
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'switch.n_i_n_a_rotator_reverse',
      'original_name': 'Reverse',
      'unique_id': '01JTESTENTRY0000000000000_rotator_reverse',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_switch_flat_panel',
      'original_name': 'Flat Panel',
      'unique_id': '01JTESTENTRY0000000000000_switch_channel_0',
    }),
    dict({
      'enabled_default': True,
      'entity_category': None,
      'entity_id': 'switch.n_i_n_a_switch_ota',
      'original_name': 'OTA',
      'unique_id': '01JTESTENTRY0000000000000_switch_channel_1',
    }),
  ])
# ---
